--- a/aidesign.tex
+++ b/aidesign.tex
@@ -25,7 +25,7 @@ Thus, the seven familiar blocks are named: ``touch (\emph{ID}) down?", ``touchin
 
 Now that the familiar blocks have been specified, I will introduce the two original blocks. The first of the entirely new blocks is a function block, labeled ``current touch ID." Simply put, the ``current touch ID" block reports the unique ID of the most recently made touch. When touches have yet to be made, the ``current touch ID" block reports the value 0, since the first touch in the execution of a project has an ID of 1. An important aspect of the behavior of the ``current touch ID" is that it increases by at most 1 per execution iteration of the Scratch programming environment. In other words, if a loop in Scratch is constantly checking the value of the ``current touch ID" block at each iteration (without having inner loops or ``wait" blocks), the value will not jump from \emph{x} to \emph{x+2} without being valued as \emph{x+1} first, even if two touches are made simultaneously. Thus, it is possible to watch the ``current touch ID" block without having to worry about missing a touch.
 
-The second new block is a trigger block labeled, ``when touch created." In many ways  the ``when touch created" block is analogous to the ``when finger pressed" block from the extended version of the Closest Finger Design and the ``when finger (\emph{index}) pressed" block from the Relative Indexing Design. However, its behavior is very specific and important to the Absolute Indexing Design. Like the ``when finger pressed" block, the ``when touch created" block is triggered by the initiation of every touch. However, unlike the ``when finger pressed" block, the ``when touch created" block does not create a new thread for every touch. Instead, the ``when touch created" block handles simultaneous triggerings in a way similar to the ``current touch ID" block. If, for example, two simultaneous touches are made, the ``when touch created" block would first execute its first stack as far as it can in one Scratch execution iteration (stopping only at a ``wait" or the end of a loop), before restarting the stack execution in the next Scratch execution iteration. Therefore, if the first block in a ``when touch created" block's connected stack contains a reference to the ``current touch ID" block, the ``current touch ID" block would have the ID of the (arbitrarily chosen) first touch during the first execution and the ID of the second touch during the second execution.
+The second new block is a trigger block labeled, ``when touch created." In many ways  the ``when touch created" block is analogous to the ``when finger pressed" block from the extended version of the Closest Finger Design and the ``when finger (\emph{index}) pressed" block from the Relative Indexing Design. However, its behavior is unique and important to the Absolute Indexing Design. Like the ``when finger pressed" block, the ``when touch created" block is triggered by the initiation of every touch. However, unlike the ``when finger pressed" block, the ``when touch created" block does not create a new thread for every touch. Instead, the ``when touch created" block handles simultaneous triggerings in a way similar to the ``current touch ID" block. If, for example, two simultaneous touches are made, the ``when touch created" block would first execute its first stack as far as it can in one Scratch execution iteration (stopping only at a ``wait" block or the end of a loop), before restarting the stack execution in the next Scratch execution iteration. Therefore, if the first block in a ``when touch created" block's connected stack contains a reference to the ``current touch ID" block, the ``current touch ID" block would have the ID of the (arbitrarily chosen) first touch during the first execution and the ID of the second touch during the second execution.
 
 Like many aspects of the Scratch programming language, the ``current touch ID" and ``when touch created" blocks are designed specifically so that Scratchers who are not concerned with concurrency bugs do not generally need to be concerned, and Scratchers who are concerned can take necessary precautions to avoid them.
 
@@ -64,7 +64,7 @@ Once Scratchers get over the barrier of learning the intuition behind the  absol
 
 To begin, the controls for the basic two-player Pong game can be implemented by having both paddles constantly repeating a simple process (Figure \ref{BasicTwoPlayerPongAID}). First, each paddle's script can check to see if the touch with the ``current touch ID" is within their paddle's control range and store the ID in a variable if it is. Then, with the stored touch ID, the script can set the paddle to follow the touch with the stored ID until it is lifted.
 
-Although this implementation of the basic two-player Pong game is complicated by the necessary use of a variable, experienced Scratchers generally have a basic understanding of how to use variables. As a result, barring the difficulty of understanding how the absolute indexing works, the complexity of this implementation is appropriate for a middle height case.
+Although this implementation of the basic two-player Pong game is complicated by the necessary use of a variable, experienced Scratchers generally have a basic understanding of how to use variables. As a result, barring the difficulty of understanding how the absolute indexing works, the complexity of this implementation is appropriate for a middle height project.
 
 Like the basic two-player Pong game, the two-finger painting project can also be implemented using the Absolute Indexing Design by programming both of the paintbrushes to forever repeat a simple process while keeping a variable in which they store the ID of the touch they currently are following (Figure \ref{TwoFingerPaintingAID}). To begin each iteration of the repeated process, each paintbrush first checks to see if the touch with the ``current touch ID" is down and not being followed by the other paintbrush. If both criteria are met, then the paintbrush sets its variable to the current touch ID (thus claiming it) and follows the touch with its pen down until the touch is lifted.
 
