--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusion}
 
-In this final chapter, I will begin by summarizing my analysis of the presented multi-touch interaction set designs presented and conclude by making suggestions for how this research may be furthered.
+In this final chapter, I will begin by summarizing my analysis of the multi-touch interaction set designs presented and conclude by making suggestions for how this research may be furthered.
 
 \section{Closing Remarks}
 
@@ -16,7 +16,7 @@ While this combination preserves the Closest Finger Design's low floors, it does
 
 Since low floors are generally achieved at the cost of high ceilings (and vice versa), it is unlikely that an indisputably ideal interaction set can ever be achieved. However, through more iteration and testing, we can get closer to designing a multi-touch interaction set that is perfect for the purposes of Tablet Scratch.
 
-One important next step to reach this goal is to have the target audiences test the various multi-touch interaction set designs and then to iterate based on their experiences. Potential interaction set designs should each be tested with Scratchers of varying experience levels to ensure that the design makes implementing simple projects simple, and complex projects possible.
+One important next step to reach this goal is to have the target audiences test the various multi-touch interaction set designs and then to iterate based on their experiences. Each potential interaction set design should be tested with Scratchers of varying experience levels to ensure that the design meets computer scientist Alan Kay's requirement that ``simple things should be simple, complex things should be possible."
 
 Although this thesis has focused on creating a multi-touch interaction set specifically within the context of Scratch, many of the ideas discussed are also applicable to designing touch-input-handling toolkits in general. There is little doubt that the toolkits used today in ``professional frameworks" are less than ideal. Not only do novice programmers have difficulty understanding how to use these toolkits, but even expert software engineers are prone to making errors while using them to develop multi-touch interactions. Despite the fact that virtually all commonly used multi-touch interactions have been developed with these professional frameworks, I am confident that it is possible to develop an equally functional multi-touch toolkit that is both more accessible and less vulnerable to bugs.
 
