--- a/cover.tex
+++ b/cover.tex
@@ -2,7 +2,7 @@
 
 \title{Scratching with All Your Fingers: Exploring Multi-Touch Programming in Scratch}
 
-\author{Christopher Graves}
+\author{Christopher Marten-Ellis Graves}
 \prevdegrees{ S.B., Massachusetts Institute of Technology (2013)}
 % If you wish to list your previous degrees on the cover page, use the 
 % previous degrees command:
