--- a/intro.tex
+++ b/intro.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction} 
 \section{Introduction to Scratch}
-Designed and developed by the Lifelong Kindergarten Group at the MIT Media Lab, Scratch is a graphical, drag-and-drop programming language and environment that allows users of all ages and educational backgrounds (but school-aged children in particular) to easily make and share their own stories, games, and animations\cite{ProgrammingForAll, Monroy-Hernandez}. Scratch was first formally proposed in 2003 as a tool to help young children gain technological fluency, allowing them to use code to express themselves and manifest their imaginations \cite{ScratchProposal}. Since being released to the public in 2007, over 3 million registered users have collectively created and shared well over 5 million projects \cite{ScratchStats} ranging from simple animated cards for Mother's Day to complex, interactive physical simulations (see Figure \ref{VarietyOfScratchProjects} for a small sampling of projects). Activity in Scratch grew dramatically in the year following the public release of Scratch 2.0 in May 2013, which allowed Scratch users to develop their projects directly in the browser rather than having to download a separate Scratch development application. 
+Designed and developed by the Lifelong Kindergarten Group at the MIT Media Lab, Scratch is a graphical, drag-and-drop programming language and environment that allows users of all ages and educational backgrounds (but school-aged children in particular) to easily make and share their own stories, games, and animations \cite{ProgrammingForAll, Monroy-Hernandez}. Scratch was first formally proposed in 2003 as a tool to help young children gain technological fluency, allowing them to use code to express themselves and manifest their imaginations \cite{ScratchProposal}. Since being released to the public in 2007, over 3 million registered users have collectively created and shared well over 5 million projects \cite{ScratchStats} ranging from simple animated cards for Mother's Day to complex, interactive physical simulations (see Figure \ref{VarietyOfScratchProjects} for a small sampling of projects). Activity in Scratch grew dramatically in the year following the public release of Scratch 2.0 in May 2013, which allowed Scratch users to develop their projects directly in the browser rather than having to download a separate Scratch development application. 
 
 Scratch users, or \emph{Scratchers} as they are called within the community, make their programs by organizing and connecting various blocks, each representing a command, a value, or a piece of logic. After making their projects, Scratchers can easily share their creations on the Scratch website for other Scratchers to play with, comment on, and remix. There are also forums where Scratchers can share ideas, help one other, and even just hang out.
 
@@ -22,12 +22,12 @@ Inspired by Logo, Scratch was also designed with the concept of keeping low floo
 \subsection{Introducing Tablet Scratch}
 Since 2010, there has been a massive proliferation of tablet computers. Tablets are currently being used for purposes ranging from ordering sandwiches to guiding museum goers to everything in between. Recently there have been a number of large-scale initiatives to use tablets for the purpose of educating children. While these initiatives are admirable, for the most part they are centered on using tablets to provide students with access to books, videos, and simple exercises. More simply put, these initiatives generally focus on using these tablets for delivering information and entertainment, rather than empowering children to create. This focus reflects the fact that most people today mainly use tablets for consuming news, videos, and emails.
 
-However, the makers of Scratch believe that children (and people in general) learn most effectively through an iterative process of designing, creating, experimenting, and exploring. As a result of this belief, in combination with these aforementioned initiatives, the Scratch team decided to provide children with a tablet application that they can use to create personalized stories, games, and animations directly on the tablet. To do so, the Scratch team decided to create Tablet Scratch, a tablet-specific version of Scratch to come out in late 2014. With Tablet Scratch, the Scratch team hoped to bring the same experience of the desktop version of Scratch to the tablet, preserving the low floors, wide walls, and high ceilings.
+However, the makers of Scratch believe that children (and people in general) learn most effectively through an iterative process of designing, creating, experimenting, and exploring. As a result of this belief, in combination with these aforementioned initiatives, the Scratch team decided to provide children with a tablet application that they can use to create personalized stories, games, and animations directly on the tablet. To do so, the Scratch team decided to create Tablet Scratch, a tablet-specific version of Scratch to come out in late 2014. With Tablet Scratch, the Scratch team hopes to bring the same experience of the desktop version of Scratch to the tablet, preserving the low floors, wide walls, and high ceilings.
 
 \section{Motivation}
 One of the main complications of bringing the Desktop Scratch experience to the tablet is that people do not interact with their tablets in the same way that they interact with their desktop computers. The most salient difference in these interactions is that people use a mouse and keyboard to manipulate desktop programs, while they use touch controls to interact with tablet applications.
 
-As a result of lacking a mouse and keyboard, tablet Scratch users will use multi-touch controls not only to create their projects, but as a main means of interaction with their projects as well. However, while the current Desktop Scratch block library has many blocks to help add mouse and keyboard interactivity, it lacks any blocks to allow multi-touch. Consequently, a multi-touch interaction set must be designed for Tablet Scratch in order to allow Tablet Scratchers to create multi-touch interactive projects.
+As a result of lacking a mouse and keyboard, Tablet Scratch users will use multi-touch controls not only to create their projects, but as a main means of interaction with their projects as well. However, while the current Desktop Scratch block library has many blocks to help add mouse and keyboard interactivity, it lacks any blocks to allow multi-touch. Consequently, a multi-touch interaction set must be designed for Tablet Scratch in order to allow Tablet Scratchers to create multi-touch interactive projects.
 
 While it is tempting to think that the mouse blocks in Scratch can be directly translated into multi-touch blocks in Tablet Scratch, there are two main differences that make multi-touch interactions necessarily more complex than mouse inputs. The first difference is that on desktop computers people interact with only one mouse, while people with tablets often interact with multiple fingers. The second is that the mouse cursor on a desktop is always present (meaning the mouse's state can be persistently tracked), while touches are only present on a tablet when the fingers are pressed down (meaning that individual touch states are ephemeral).
 
