--- a/ridesign.tex
+++ b/ridesign.tex
@@ -1,7 +1,7 @@
 \chapter{Relative Indexing Design}
 While the Closest Finger Design does greatly simplify the task of handling up to ten simultaneous touches, it does so by avoidance. By restricting each sprite to only being able to listen to one touch at a time, the Closest Finger Design eludes having to handle ten touches within the same script. Even though this approach is reasonable, there are other potential strategies for simplification without such a restriction.
 
-For example, one natural way to think about handling the up to ten simultaneous touches is to think of them as ten persistent touch-objects, among which all touch inputs are distributed. Since there can be at most ten simultaneous touch inputs, ten touch-objects are enough to handle all touch inputs made throughout the execution of any project. Each of these touch objects will be used to store the input values of the touch it is currently associated with, i.e. the x and y coordinates of the touch and whether the touch is being pressed on the tablet. The big question with such a design becomes: What is the best way to distribute the touch inputs amongst the ten touch-objects?
+For example, one natural way to think about handling the up to ten simultaneous touches is to think of them as ten persistent touch-objects, among which all touch inputs are distributed. Since there can be at most ten simultaneous touch inputs, ten touch-objects are enough to handle all touch inputs made throughout the execution of any project. Each of these touch objects will be used to store the input values of the touch it is currently associated with, i.e., the x and y coordinates of the touch and whether the touch is being pressed on the tablet. The big question with such a design becomes: What is the best way to distribute the touch inputs amongst the ten touch-objects?
 
 In this second multi-touch interaction set design, which I have named the \emph{Relative Indexing Design}, the persistent touch-objects are indexed $1$ through $10$ and represent the status of the touch inputs with matching indices. The touch inputs are indexed relative to the other concurrent touches in order of initiation from $1$ to the number of current touches. Since touches are (as the design's name implies) indexed relatively, a touch's associated index (and, thus, associated persistent touch-object) can  be subject to change. For example, a touch that was the third-oldest current touch (meaning it has an associated index of 3) can become the oldest current touch (meaning an associated index of 1) if the two older current touches are lifted. While this manner of indexing is intuitive, it has a few quirks that can lead to many unforeseen bugs in the development of seemingly simple projects.
 
@@ -25,7 +25,7 @@ The parameter is a drop-down menu with values ranging from 1 to 10, but it is al
 \centering
 \includegraphics{images/Relative_Indexing_Design_Block_Set.PNG}
 \includegraphics{images/Relative_Indexing_Design_Block_Dropdown_Show.PNG}
-\caption[Remaining Eight Blocks in the Relative Indexing Design Interaction Set]{On the left are the remaining eight blocks in the Relative Indexing Design interaction set.  On the right there are two examples of the ``finger (\emph{index}) x" block: one with the drop-down menu opened and the other with an inserted function block.}
+\caption[Remaining Eight Blocks in the Relative Indexing Design Interaction Set]{On the left are the remaining eight blocks in the Relative Indexing Design interaction set.  On the right there are two examples of the ``finger (\emph{index}) x" block: one with an inserted function block and the other with its drop-down menu opened.}
 \label{Relative_Indexing_Design_Block_Set}
 \end{figure}
 
@@ -76,7 +76,7 @@ Similarly, implementing the two-finger painting project using the Relative Index
 \label{NaiveTwoFingerPaintingRID}
 \end{figure}
 
-This control scheme works for the most part, but there is a pernicious bug for which there is no simple solution. The bug occurs when there are two touches simultaneously on the tablet, and the touch with index 1 (i.e., the first touch) is lifted before the touch with index 2 (i.e., the second touch). At this moment, the paintbrush following the second created touch stops following it, because ``finger (2) down?" would evaluate to \emph{false}. Also, the paintbrush following the first touch, would then start to follow the second touch, since its index changed from 2 to 1. This transfer is fine, but the problem is that the paintbrush following the first touch does not know to lift up its pen before starting to follow the second paintbrush, leading to an unintentional line in the user's painting (e.g., right side of Figure \ref{NaiveTwoFingerPaintingRID}). 
+This control scheme works for the most part, but there is a pernicious bug for which there is no simple solution. The bug occurs when there are two touches simultaneously on the tablet, and the touch with index 1 (i.e., the first touch) is lifted before the touch with index 2 (i.e., the second touch). At this moment, the paintbrush following the second touch stops following it, because ``finger (2) down?" would evaluate to \emph{false}. Also, the paintbrush following the first touch, would then start to follow the second touch, since the second touch's index changed from 2 to 1. This transfer is fine, but the problem is that the paintbrush following the first touch does not know to lift up its pen before starting to follow the second paintbrush, leading to an unintentional line in the user's painting (e.g., right side of Figure \ref{NaiveTwoFingerPaintingRID}). 
 
 There are reasonable solutions (e.g., left side of Figure \ref{WaryTwoFingerPaintingRID}) to the bug that prevent the unintentional line from appearing, but they result in small gaps in the finger painting lines (e.g., right side of Figure \ref{WaryTwoFingerPaintingRID}). Furthermore, even these imperfect solutions pose a considerable challenge to experienced Scratchers. A ``perfect," practical implementation for multi-finger painting cannot be done using the Relative Indexing Design, because some data will be lost when the touch index transfers occur. This loss of data is due in part to the fact that there is no sure way to differentiate between two similar but importantly distinct events: the event in which the first touch is lifted before the second and the event in which the second touch is lifted before the first. That being said, reasonable assumptions can be made by comparing touch locations, as was the case for the Closest Finger Design. 
 
